--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://edge01.iptv.digijadoo.net/live/atn_bangla/playlist.m3u8?md5=_NtQTh5o2LX_0Fema13ooQ&expires=1724587699&user=ec6dd7dec84545a2a15edb664bb2d4aa"> </video>
+<source type="application/vnd.apple.mpegurl" src="https://cdn.hotflix-bd.online/hotflixbd/T-Sports/index.m3u8"> </video>
  </video>
 </body>
 <script>
