--- a/.github/workflows/ptvsport.html
+++ b/.github/workflows/ptvsport.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://cdn.hotflix-bd.online/hotflixbd/T-Sports/index.m3u8"> </video>
+<source type="application/vnd.apple.mpegurl" src="https://tv5.hoichoi24.com/1000/video.m3u8"> </video>
  </video>
 </body>
 <script>
